[gd_scene load_steps=6 format=3 uid="uid://c1xumvqdhvlaa"]

[ext_resource type="Script" path="res://Scripts/FolderItem.gd" id="1_um6go"]
[ext_resource type="Texture2D" uid="uid://cr17b104c7ng0" path="res://Image/file_icon.png" id="2_2ca3s"]
[ext_resource type="FontFile" uid="uid://cfmwpdywugh67" path="res://Font/NANUMMYEONGJO.TTF" id="2_7v258"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qo1l3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65scb"]
bg_color = Color(0.596078, 0.596078, 0.596078, 0.266667)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Item" type="VBoxContainer"]
offset_right = 50.0
offset_bottom = 79.0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_um6go")

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_2ca3s")
expand_mode = 1

[node name="Button" type="Button" parent="Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_qo1l3")
theme_override_styles/hover = SubResource("StyleBoxFlat_65scb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qo1l3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qo1l3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qo1l3")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
offset_right = 500.0
offset_bottom = 390.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7v258")
theme_override_font_sizes/font_size = 80
text = "item name"
autowrap_mode = 3

[connection signal="mouse_entered" from="Icon/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Icon/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Icon/Button" to="." method="_on_button_pressed"]
